@@ -34,6 +34,9 @@ INSERT INTO images (image_id,name,file_name_png,file_hash_png,file_name_ico,file
 INSERT INTO images (image_id,name,file_name_png,file_hash_png,file_name_ico,file_hash_ico)
 	VALUES (IMG_TEMPLATE_ROOT,'Obj.TemplateRoot','template_root.png','<invalid_hash>',
                 'template_root.ico','<invalid_hash>');
+INSERT INTO images (image_id,name,file_name_png,file_hash_png,file_name_ico,file_hash_ico)
+	VALUES (IMG_NETWORK_SERVICE,'Obj.NetworkService','network_service.png','<invalid_hash>',
+                'network_service.ico','<invalid_hash>');
 
 
 /*
@@ -58,3 +61,5 @@ INSERT INTO default_images (object_class,image_id)
 	VALUES (9, IMG_TEMPLATE_GROUP);
 INSERT INTO default_images (object_class,image_id)
 	VALUES (10, IMG_TEMPLATE_ROOT);
+INSERT INTO default_images (object_class,image_id)
+	VALUES (11, IMG_NETWORK_SERVICE);
